updated index and frame imgs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="CVhover">
 	
 	<p>
-		<a href="file:///Users/madelineolson/Documents/hm/skool%20fall%202017/bfa/documentation/2019website/CVRESUMEJUNE2020.pdf">CV</a>
+		<a href="https://drive.google.com/file/d/1HYaCLXd2fg4mHE5JT41CVrTGseibQsLy/view?usp=sharing">CV</a>
 	</p>
 
 
