--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 	<h1>Madeline Olson</h1>
-	<p id="email">mbolson.19@gmail.com</p>
+	<p id="email">maddy@lvl3official.com</p>
 	<p id="location">Chicago, IL</p>
 
 
