--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 
 
-	<h1>Madeline Olson</h1>
+	<h1>
+		Madeline Olson 
+
+	</h1>
 	<p id="email">maddy@lvl3official.com</p>
 	<p id="location">Chicago, IL</p>
 
@@ -67,7 +70,7 @@
 		<iframe src="https://player.vimeo.com/video/328056451" width="800" height="300" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 		<img src="gopropic1.jpg">
-		<img src="gopropic2.jpg">
+		<!-- <img src="gopropic2.jpg"> -->
 		<img src="gopropic3.jpg">
 		<img src="collectiongrid.jpg">
 		<p>
@@ -84,7 +87,7 @@
 		</p>
 			
 
-		<img src="laundryroom1.jpg">
+		<!-- <img src="laundryroom1.jpg"> -->
 		<img src="laundryroom2.jpg">
 		<img src="laundryroom3.jpg">
 		<img src="laundryroom4.jpg">
